public interface ServicioAutenticacion {
    
    public boolean autenticar(String nombre, String clave);
    
}
